# kvarko

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
kvarko-cli/: Cargo.toml
kvarko-cli/src/: args.rs  book.rs  main.rs
kvarko-compare/: Cargo.toml
kvarko-compare/src/: args.rs  main.rs  openings.rs  validation.rs
kvarko-engine/: Cargo.toml
kvarko-engine/benches/: eval.rs
kvarko-engine/src/: base_evaluator.rs  book.rs  depth.rs  eval.rs  lib.rs  ordering.rs  sort.rs  ttable.rs
kvarko-engine/tests/: crash.rs  tactics.rs  ttable.rs
kvarko-lichess-bot/: Cargo.toml
kvarko-lichess-bot/src/: main.rs
kvarko-model/: Cargo.toml  magics.json
kvarko-model/src/: board.rs  error.rs  game.rs  hash.rs  lib.rs  movement.rs  piece.rs  player.rs  rules.rs  state.rs
kvarko-model/src/board/: locations.rs  mod.rs
kvarko-model/tests/: hash_tree.rs  perft.rs
kvarko-proc-macro/: Cargo.toml
kvarko-proc-macro/src/: lib.rs
kvarko-view/: Cargo.toml
kvarko-view/src/: main.rs  sync.rs  view.rs
kvarko-view/src/state/: game.rs  menu.rs  mod.rs  popup.rs
kvarko-view/src/ui/: button.rs  label.rs  mod.rs
