[package]
name = "kvarko-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
clap = { version = "3.2", features = [ "derive" ] }
kvarko-engine = { path = "../kvarko-engine" }
kvarko-model = { path = "../kvarko-model" }
pgn-reader = "0.20"
