[package]
name = "kvarko-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
kvarko-model = { path = "../kvarko-model" }
serde = { version = "1.0", features = [ "derive" ] }

[dev-dependencies]
kernal = "0.2"
rstest = "0.18"
