[package]
name = "kvarko-lichess-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
kvarko-engine = { path = "../kvarko-engine" }
kvarko-model = { path = "../kvarko-model" }
libot = { git = "https://github.com/florian1345/libot" }
tokio = { version = "1", features = [ "full" ] }
