[package]
name = "kvarko-model"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvarko-proc-macro = { path = "../kvarko-proc-macro" }
rand = "0.8"
serde = { version = "1.0", features = [ "derive" ] }

[dev-dependencies]
kernal = "0.2"
rstest = "0.18"
