[package]
name = "kvarko-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7"
kvarko-engine = { path = "../kvarko-engine" }
kvarko-model = { path = "../kvarko-model" }
tokio = { version = "1.18", features = [ "sync" ] }
